--- a/public/css/questions.css
+++ b/public/css/questions.css
@@ -3,11 +3,9 @@
     border: 1px solid #ccc; /* Серый цвет рамки */
     padding: 15px; /* Увеличиваем отступ внутри рамки */
     border-radius: 8px; /* Добавляем закругленные углы */
-    margin: 10px 0; /* Отступы между плашками */
+    margin: 10px auto; /* Отступы между плашками */
     background-color: #f9f9f9; /* Цвет фона для вопросов */
     width: 80%; /* Ширина плашки в процентах от экрана */
-    margin-left: auto; /* Центрируем плашку */
-    margin-right: auto; /* Центрируем плашку */
     font-size: 20px; /* Увеличиваем размер шрифта для вопросов */
     transition: background-color 0.3s ease; /* Плавное изменение фона при наведении */
 }
