--- a/public/css/request.css
+++ b/public/css/request.css
@@ -2,14 +2,13 @@
     display: flex; /* Используем flexbox для выравнивания */
     flex-wrap: wrap; /* Позволяет переносить плашки на новую строку */
     justify-content: center; /* Центрируем плашки по горизонтали */
-    margin: 0 25%; /* Устанавливаем равномерный отступ слева и справа в процентах */
 }
 
 .request-item {
     background-color: #fff; /* Цвет фона плашки */
     border: 4px solid rgba(255, 165, 0, 0.5); /* Прозрачная оранжевая рамка (толщина 4px) */
     border-radius: 30px; /* Сильно скругленные края для создания полукруглой формы */
-    padding: 15px 25px; /* Отступы внутри плашки */
+    padding: 10px 25px; /* Отступы внутри плашки */
     margin: 10px; /* Отступ между плашками */
     font-size: 20px; /* Увеличиваем шрифт */
     font-weight: bold; /* Делаем шрифт жирным */
@@ -25,9 +24,9 @@
 }
 
 .requests-intro {
-    font-size: 24px !important; /* Увеличенный шрифт */
+    font-size: 22px !important; /* Увеличенный шрифт */
     text-align: left !important; /* Выровняем текст влево */
-    margin-left: 30%; /* Отступ слева, измените процент по необходимости */
+    margin-left: 7%; /* Отступ слева, измените процент по необходимости */
     margin-bottom: 20px !important; /* Отступ снизу */
     color: #333 !important; /* Цвет текста */
 }
@@ -37,14 +36,14 @@
     font-weight: bold; /* Сделать текст выделения более выразительным */
 }
 
-@media (max-width: 768px) { /* Для экранов шириной 768px и меньше */
-    .request-item {
-        font-size: 16px; /* Уменьшенный шрифт для мобильных */
-        padding: 10px 15px; /* Уменьшенные отступы для мобильных */
-    }
+/*@media (max-width: 768px) { !* Для экранов шириной 768px и меньше *!*/
+/*    .request-item {*/
+/*        font-size: 16px; !* Уменьшенный шрифт для мобильных *!*/
+/*        padding: 10px 15px; !* Уменьшенные отступы для мобильных *!*/
+/*    }*/
 
-    .requests-intro {
-        font-size: 20px !important; /* Уменьшенный шрифт */
-        margin-left: 10%; /* Уменьшенный отступ слева для мобильных */
-    }
-}
+/*    .requests-intro {*/
+/*        font-size: 20px !important; !* Уменьшенный шрифт *!*/
+/*        margin-left: 10%; !* Уменьшенный отступ слева для мобильных *!*/
+/*    }*/
+/*}*/
