--- a/public/css/request.css
+++ b/public/css/request.css
@@ -36,14 +36,14 @@
     font-weight: bold; /* Сделать текст выделения более выразительным */
 }
 
-/*@media (max-width: 768px) { !* Для экранов шириной 768px и меньше *!*/
-/*    .request-item {*/
-/*        font-size: 16px; !* Уменьшенный шрифт для мобильных *!*/
-/*        padding: 10px 15px; !* Уменьшенные отступы для мобильных *!*/
-/*    }*/
+@media (max-width: 768px) { /* Для экранов шириной 768px и меньше */
+    .request-item {
+        font-size: 16px; /* Уменьшенный шрифт для мобильных */
+        padding: 10px 15px; /* Уменьшенные отступы для мобильных */
+    }
 
-/*    .requests-intro {*/
-/*        font-size: 20px !important; !* Уменьшенный шрифт *!*/
-/*        margin-left: 10%; !* Уменьшенный отступ слева для мобильных *!*/
-/*    }*/
-/*}*/
+    .requests-intro {
+        font-size: 20px !important; /* Уменьшенный шрифт */
+        margin-left: 10%; /* Уменьшенный отступ слева для мобильных */
+    }
+}
