--- a/public/css/request.css
+++ b/public/css/request.css
@@ -36,7 +36,7 @@
     font-weight: bold; /* Сделать текст выделения более выразительным */
 }
 
-@media (max-width: 768px) { /* Для экранов шириной 768px и меньше */
+@media (max-width: 850px) {
     .request-item {
         font-size: 16px; /* Уменьшенный шрифт для мобильных */
         padding: 10px 15px; /* Уменьшенные отступы для мобильных */
